<resources>
    <string name="app_name">Chat_03</string>
    <string name="signin_username">User name</string>
    <string name="signin_password">Password</string>
    <string name="signin">Sign in</string>
    <string name="signin_dont_have_account">Don\'t have an account ?</string>
    <string name="signup">Sign up</string>
    <string name="login_loading">Loading...</string>
    <string name="msg_login_fail">Tài khoản hoặc mật khẩu không đúng</string>
    <string name="msg_login_account_empty">Chưa điền đầy đủ thông tin</string>
    <string name="signup_full_name">Full name</string>
    <string name="signup_email">Email</string>
    <string name="signup_re_password">Confirm password</string>
    <string name="error_empty_fullname">Bạn chưa nhập tên</string>
    <string name="error_empty_email">Bạn chưa nhập email</string>
    <string name="error_empty_password">Bạn chưa nhập mật khẩu</string>
    <string name="error_empty_confirm_password">Bạn chưa nhập xác nhận mật khẩu</string>
    <string name="error_confirm_password">Mật khẩu không khớp</string>
    <string name="signup_create_error">Tạo tài khoản không thành công</string>
    <string name="error_weak_password">Mật khẩu phải nhiều hơn 6 ký tự</string>
    <string name="signup_permission_error">Bạn cần phải cấp quyền để sử dụng</string>
    <string name="error_upload_image_fail">Tải ảnh lên không thành công</string>
    <string name="title_list_inbox">Message</string>
    <string name="title_list_friend">Friend</string>
    <string name="title_profile">Profile</string>
    <string name="display_last_message_of_user">Display last message</string>
    <string name="display_name_user">Display name user</string>
    <string name="display_last_online">3h ago</string>
    <string name="display_user_status">Display user\'s status</string>
    <string name="display_user_email">Display user\'s email</string>
    <string name="status_default">Hi, I\'m </string>
    <string name="signup_empty_image">Bạn chưa chọn ảnh đại diện</string>
    <string name="profile_email">Email :</string>
    <string name="log_out_title">Đăng xuất ?</string>
    <string name="log_out_mes">Bạn có chắc chắn muốn đăng xuất không ?</string>
    <string name="action_positive">Có</string>
    <string name="action_negative">Không</string>
    <string name="status">Status</string>
    <string name="accept">Accept</string>
    <string name="error_empty_status">Bạn chưa nhập status</string>
    <string name="success_update_user">Cập nhật thông tin thành công</string>
    <string name="hint_edit_text_chat">Type a conversation</string>
    <string name="state_online">Online</string>
</resources>
